--- a/ansible/vars/common.yml
+++ b/ansible/vars/common.yml
@@ -1,6 +1,6 @@
 ---
     php_ppa: php5-5.6
-    doc_root: /var/www
+    doc_root: /var/www/miniwiki/web
     sys_packages: ["git-core", "vim"]
     dist: precise
     php_packages: ["php5-xdebug"]
